# WS-2-Archaas-nus-iss-workshop1

./: .gitignore  Lab1_introduction_to_agents_openAI.ipynb  README.md  agents101_openAI_day1_workshop.ipynb  individual_assignment_day1_V0.ipynb  individual_assignment_day1_V1.ipynb  prompt_engineering_amazon_bedrock_day1_workshop.ipynb  prompt_engineering_day1_solution.ipynb  prompt_engineering_day1_workshop.ipynb  prompt_engineering_reasoning_models_day1_workshop.ipynb  wikipedia_enhanced.py
agentic-ai-course/: .gitignore
agentic-ai-course/demo/: .env.example  README.md  d1-openai-agents-demo.ipynb  d2-mcp-demo.ipynb  d3-smolagents-demo.ipynb  d5-crewai-demo.ipynb  d6-langgraph-demo.ipynb  pyproject.toml
agentic-ai-course/workshop/: README.md  main.py  nodes.py  pyproject.toml  state.py
agentic-ai-course/workshop-starter/: .env.example  ASSIGNMENT.md  README.md  main.py  nodes.py  state.py
agentic-ai-course/workshop-starter/agents/: summarizer.py
agentic-ai-course/workshop-starter/tools/: __init__.py  singapore_time.py  singapore_weather.py
agentic-ai-course/workshop/agents/: __init__.py  coordinator.py  participant.py  summarizer.py
agentic-ai-course/workshop/tools/: singapore_news.py  singapore_time.py  test.py
carbon-aware-agent-workshop/carbon-aware-agent-workshop/: README_carbon_aware_agent_workshop.md  requirements.txt
carbon-aware-agent-workshop/carbon-aware-agent-workshop/data/: mock_forecast.json
day 2 demo codes/: Memory.ipynb  agent.py
day_3_afternoon/tmp_agentic/: README_day_3_afternoon.md
(+12 files in other folders)
